@@ -31,39 +31,40 @@ public abstract class BaseBuilder<M, D> implements Builder {
 			M model = null;
 			return null; //TODO
 		}
-		List<M> models = this.build(directives, Arrays.asList(data));
+		List<M> models = this.build(directives, List.of(data));
 		return models.stream().findFirst().orElse(null); //TODO
 	}
 
-	public abstract List<M> build(FieldSet directives, List<D> datas) throws MyApplicationException;
+	public abstract List<M> build(FieldSet directives, List<D> data) throws MyApplicationException;
 
 	public <K> Map<K, M> asForeignKey(QueryBase<D> query, FieldSet directives, Function<M, K> keySelector) throws MyApplicationException {
 		this.logger.trace("Building references from query");
-		List<D> datas = query.collectAs(directives);
-		this.logger.debug("collected {} items to build", Optional.ofNullable(datas).map(e -> e.size()).orElse(0));
-		return this.asForeignKey(datas, directives, keySelector);
+		List<D> data = query.collectAs(directives);
+		this.logger.trace("collected {} items to build", Optional.ofNullable(data).map(List::size).orElse(0));
+		return this.asForeignKey(data, directives, keySelector);
 	}
 
-	public <K> Map<K, M> asForeignKey(List<D> datas, FieldSet directives, Function<M, K> keySelector) throws MyApplicationException {
+	public <K> Map<K, M> asForeignKey(List<D> data, FieldSet directives, Function<M, K> keySelector) throws MyApplicationException {
 		this.logger.trace("building references");
-		List<M> models = this.build(directives, datas);
-		this.logger.debug("mapping {} build items from {} requested", Optional.ofNullable(models).map(e -> e.size()).orElse(0), Optional.ofNullable(datas).map(e -> e.size()).orElse(0));
-		Map<K, M> map = models.stream().collect(Collectors.toMap(o -> keySelector.apply(o), o -> o));
-		return map;
+		List<M> models = this.build(directives, data);
+		this.logger.trace("mapping {} build items from {} requested", Optional.ofNullable(models).map(List::size).orElse(0), Optional.ofNullable(data).map(List::size).orElse(0));
+		assert models != null;
+		return models.stream().collect(Collectors.toMap(keySelector, o -> o));
 	}
 
 	public <K> Map<K, List<M>> asMasterKey(QueryBase<D> query, FieldSet directives, Function<M, K> keySelector) throws MyApplicationException {
 		this.logger.trace("Building details from query");
-		List<D> datas = query.collectAs(directives);
-		this.logger.debug("collected {} items to build", Optional.ofNullable(datas).map(e -> e.size()).orElse(0));
-		return this.asMasterKey(datas, directives, keySelector);
+		List<D> data = query.collectAs(directives);
+		this.logger.trace("collected {} items to build", Optional.ofNullable(data).map(List::size).orElse(0));
+		return this.asMasterKey(data, directives, keySelector);
 	}
 
-	public <K> Map<K, List<M>> asMasterKey(List<D> datas, FieldSet directives, Function<M, K> keySelector) throws MyApplicationException {
+	public <K> Map<K, List<M>> asMasterKey(List<D> data, FieldSet directives, Function<M, K> keySelector) throws MyApplicationException {
 		this.logger.trace("building details");
-		List<M> models = this.build(directives, datas);
-		this.logger.debug("mapping {} build items from {} requested", Optional.ofNullable(models).map(e -> e.size()).orElse(0), Optional.ofNullable(datas).map(e -> e.size()).orElse(0));
+		List<M> models = this.build(directives, data);
+		this.logger.trace("mapping {} build items from {} requested", Optional.ofNullable(models).map(List::size).orElse(0), Optional.ofNullable(data).map(List::size).orElse(0));
 		Map<K, List<M>> map = new HashMap<>();
+		assert models != null;
 		for (M model : models) {
 			K key = keySelector.apply(model);
 			if (!map.containsKey(key)) map.put(key, new ArrayList<M>());
@@ -74,10 +75,9 @@ public abstract class BaseBuilder<M, D> implements Builder {
 
 	public <FK, FM> Map<FK, FM> asEmpty(List<FK> keys, Function<FK, FM> mapper, Function<FM, FK> keySelector) {
 		this.logger.trace("building static references");
-		List<FM> models = keys.stream().map(x -> mapper.apply(x)).collect(Collectors.toList());
-		this.logger.debug("mapping {} build items from {} requested", Optional.ofNullable(models).map(x -> x.size()).orElse(0), Optional.ofNullable(keys).map(x -> x.size()));
-		Map<FK, FM> map = models.stream().collect(Collectors.toMap(o -> keySelector.apply(o), o -> o));
-		return map;
+		List<FM> models = keys.stream().map(mapper).collect(Collectors.toList());
+		this.logger.trace("mapping {} build items from {} requested", Optional.of(models).map(List::size).orElse(0), Optional.of(keys).map(x -> x.size()));
+		return models.stream().collect(Collectors.toMap(keySelector, o -> o));
 	}
 
 	protected String hashValue(Instant value) throws MyApplicationException {
